fix: fixed overflow issue of stacked bar on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -430,6 +430,10 @@
   top: 0;
 }
 
+.min-height-700 {
+  min-height: 700px;
+}
+
 // Import component-specific sass files
 @import "courseware/course/celebration/CelebrationModal.scss";
 @import "courseware/course/sidebar/sidebars/discussions/Discussions.scss";
